--- a/index.html
+++ b/index.html
@@ -84,15 +84,13 @@
         }
         .photo-section {
             display: flex;
-            justify-content: center;
-            align-items: center;
             gap: 10px;
             padding: 20px;
         }
         .photo-placeholder {
             position: relative;
-            width: 1024px;
-            height: 768px;
+            flex: 1;
+            height: 300px;
             overflow: hidden;
             border-radius: 15px;
             cursor: pointer;
@@ -174,7 +172,7 @@
                 <span>About</span>
             </a>
             <div class="photo-placeholder">
-                <img src="https://via.placeholder.com/1024x768" alt="Photo Placeholder 3">
+                <img src="https://via.placeholder.com/1024x300" alt="Photo Placeholder 3">
                 <span>Photo Placeholder</span>
             </div>
         </div>
