--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         <a href="/website" class="menu-link">Home</a>
         <a href="/website/about" class="menu-link">About</a>
         <a href="/website/donate" class="menu-link">Donate</a>
+        <a href="/website/volunteer" class="menu-link">Volunteer</a>
     </div>
     <div class="content">
         <div class="logo">
@@ -189,7 +190,8 @@
         <p>
             <a href="/website/">Home</a> |
             <a href="/website/about">About</a> |
-            <a href="/website/donate">Donate</a>
+            <a href="/website/donate">Donate</a> |
+            <a href="/website/volunteer">Volunteer</a>
         </p>
         <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
     </footer>
