--- a/donate/index.html
+++ b/donate/index.html
@@ -78,9 +78,10 @@
 </head>
 <body>
     <div class="menu-bar">
-        <a href="/website/" class="menu-link">Home</a>
+        <a href="/website" class="menu-link">Home</a>
         <a href="/website/about" class="menu-link">About</a>
         <a href="/website/donate" class="menu-link">Donate</a>
+        <a href="/website/volunteer" class="menu-link">Volunteer</a>
     </div>
     <div class="content">
         <!-- Venmo Section -->
