--- a/donate/index.html
+++ b/donate/index.html
@@ -6,29 +6,37 @@
     <title>Donate - Mind Matters</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
+        :root {
+            --primary-color: rgb(45, 197, 105);
+            --secondary-color: rgb(10, 129, 66);
+            --white: #ffffff;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: #f4f4f9;
-            color: #333;
-            line-height: 1.6;
+            color: var(--secondary-color);
+            background: var(--white);
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .menu-bar {
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: white;
+            background-color: var(--secondary-color);
+            color: var(--white);
             display: flex;
             justify-content: center;
             padding: 10px 0;
             z-index: 2;
+            font-size: 1rem;
         }
         .menu-bar a {
             margin: 0 20px;
             text-decoration: none;
-            color: white;
+            color: var(--white);
             font-size: 1rem;
             position: relative;
             display: inline-block;
@@ -40,7 +48,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background-color: white;
+            background-color: var(--white);
             transition: width 0.3s ease-in-out;
         }
         .menu-bar a:hover::after {
