--- a/donate/index.html
+++ b/donate/index.html
@@ -82,6 +82,35 @@
             font-weight: bold;
             color: #444;
         }
+        footer {
+            background: var(--secondary-color);
+            color: var(--white);
+            padding: 20px;
+            text-align: center;
+            margin-top: auto;
+        }
+        footer .social-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        footer .social-buttons a {
+            display: flex;
+            align-items: center;
+        }
+        footer .social-buttons img {
+            width: 40px;
+            height: 40px;
+        }
+        footer a {
+            color: var(--primary-color);
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -115,7 +144,7 @@
             <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
                 <img src="https://static-00.iconduck.com/assets.00/instagram-with-circle-icon-2048x2048-21sdb59c.png" alt="Instagram">
             </a>
-            <a href="https://www.linkedin.com/company/mindmatters-foundation/" target="_blank">
+            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">
                 <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn">
             </a>
         </div>
@@ -128,5 +157,4 @@
         <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
     </footer>
 </body>
-    
 </html>
