--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         }
         .photo-placeholder {
             position: relative;
-            flex: 1;
-            height: 300px;
+            width: 1024px;
+            height: 768px;
             overflow: hidden;
             border-radius: 15px;
             cursor: pointer;
@@ -173,7 +173,7 @@
                 <span>About</span>
             </a>
             <div class="photo-placeholder">
-                <img src="https://via.placeholder.com/1024x300" alt="Photo Placeholder 3">
+                <img src="https://via.placeholder.com/1024x768" alt="Photo Placeholder 3">
                 <span>Photo Placeholder</span>
             </div>
         </div>
