--- a/about/index.html
+++ b/about/index.html
@@ -12,6 +12,10 @@
             --white: #ffffff;
         }
 
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -34,6 +38,7 @@
             padding: 10px 0;
             z-index: 2;
             font-size: 1rem;
+            line-height: 1.2;
         }
         .menu-bar a {
             margin: 0 20px;
