--- a/donate/index.html
+++ b/donate/index.html
@@ -67,7 +67,7 @@
             padding: 20px;
             border: 1px solid var(--secondary-color);
             border-radius: 10px;
-            width: 280px;
+            width: 350px; /* Increased width for better layout */
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
         }
@@ -137,6 +137,11 @@
                 <img src="zellelogo.png" alt="Zelle">
                 <p class="payment-name">Donate via Zelle</p>
                 <p class="payment-handle">mindmattersfoundation24@gmail.com</p>
+            </div>
+            <div class="payment-option">
+                <img src="https://via.placeholder.com/100" alt="Contact">
+                <p class="payment-name">Alternate Donation Methods</p>
+                <p class="payment-handle">DM us on Instagram or email us at <strong>mindmattersfoundation24@gmail.com</strong></p>
             </div>
         </div>
         <p>Your payment information is handled securely. We do not store or share your personal information.</p>
