--- a/donate/index.html
+++ b/donate/index.html
@@ -93,12 +93,12 @@
             padding: 20px;
             border: 1px solid var(--secondary-color);
             border-radius: 10px;
-            width: 100%; /* Full width of the container */
+            width: 750px; /* Reduced width slightly */
             margin-top: 20px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
         .alternate-methods img {
-            width: 50px;
+            width: 100px; /* Made the image larger */
             margin-bottom: 10px;
         }
         footer {
