--- a/donate/index.html
+++ b/donate/index.html
@@ -93,10 +93,10 @@
             padding: 30px; /* Increased padding */
             border: 1px solid var(--secondary-color);
             border-radius: 10px;
-            width: 800px; /* Slightly larger width */
-            margin-top: 20px;
+            width: calc(350px * 2 + 30px); /* Combined width of two boxes plus gap */
+            margin: 20px auto; /* Centered the box */
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease; /* Added hover effect */
+            transition: transform 0.3s ease;
         }
         .alternate-methods:hover {
             transform: translateY(-5px);
@@ -160,7 +160,6 @@
             <p class="payment-name">Alternate Donation Methods</p>
             <p>DM us on Instagram or email us at <strong>mindmattersfoundation24@gmail.com</strong> if you'd like to suggest another donation method.</p>
         </div>
-        <p>Your payment information is handled securely. We do not store or share your personal information.</p>
     </div>
     <footer>
         <div class="social-buttons">
