--- a/index.html
+++ b/index.html
@@ -22,51 +22,22 @@
             flex-direction: column;
             min-height: 100vh;
         }
-        .menu-bar {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background-color: var(--secondary-color);
-            color: var(--white);
-            display: flex;
-            justify-content: center;
-            padding: 10px 0;
-            z-index: 2;
-            font-size: 1rem;
-        }
-        .menu-bar a {
-            margin: 0 20px;
-            text-decoration: none;
-            color: var(--white);
-            font-size: 1rem;
-            position: relative;
-            display: inline-block;
-        }
-        .menu-bar a::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background-color: var(--white);
-            transition: width 0.3s ease-in-out;
-        }
-        .menu-bar a:hover::after {
-            width: 100%;
-        }
+
         .content {
             text-align: center;
             padding-top: 100px;
             flex: 1;
         }
+
         .logo {
             margin: 20px 0;
         }
+
         .logo img {
             width: 400px;
             height: auto;
         }
+
         .donate-button {
             margin: 30px auto;
             display: inline-block;
@@ -79,14 +50,17 @@
             text-decoration: none;
             transition: background 0.3s ease;
         }
+
         .donate-button:hover {
             background: var(--secondary-color);
         }
+
         .photo-section {
             display: flex;
             gap: 10px;
             padding: 20px;
         }
+
         .photo-placeholder {
             position: relative;
             width: 1024px;
@@ -95,6 +69,7 @@
             border-radius: 15px;
             cursor: pointer;
         }
+
         .photo-placeholder img {
             width: 100%;
             height: 100%;
@@ -102,9 +77,11 @@
             transition: transform 0.3s ease;
             border-radius: 15px;
         }
+
         .photo-placeholder:hover img {
             transform: scale(1.1);
         }
+
         .photo-placeholder span {
             position: absolute;
             top: 50%;
@@ -117,47 +94,14 @@
             opacity: 0;
             transition: opacity 0.3s ease;
         }
+
         .photo-placeholder:hover span {
             opacity: 1;
-        }
-        footer {
-            background: var(--secondary-color);
-            color: var(--white);
-            padding: 20px;
-            text-align: center;
-            margin-top: auto;
-        }
-        footer .social-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-        footer .social-buttons a {
-            display: flex;
-            align-items: center;
-        }
-        footer .social-buttons img {
-            width: 40px;
-            height: 40px;
-        }
-        footer a {
-            color: var(--primary-color);
-            text-decoration: none;
-            margin: 0 10px;
-        }
-        footer a:hover {
-            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="menu-bar">
-        <a href="/website" class="menu-link">Home</a>
-        <a href="/website/about" class="menu-link">About</a>
-        <a href="/website/donate" class="menu-link">Donate</a>
-        <a href="/website/volunteer" class="menu-link">Volunteer</a>
-    </div>
+    <div id="header"></div>
     <div class="content">
         <div class="logo">
             <img src="MindMattersLogo_Upload.png" alt="Mind Matters Logo">
@@ -178,22 +122,18 @@
             </div>
         </div>
     </div>
-    <footer>
-        <div class="social-buttons">
-            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
-                <img src="https://static-00.iconduck.com/assets.00/instagram-with-circle-icon-2048x2048-21sdb59c.png" alt="Instagram">
-            </a>
-            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">
-                <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn">
-            </a>
-        </div>
-        <p>
-            <a href="/website/">Home</a> |
-            <a href="/website/about">About</a> |
-            <a href="/website/donate">Donate</a> |
-            <a href="/website/volunteer">Volunteer</a>
-        </p>
-        <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
-    </footer>
+    <div id="footer"></div>
+
+    <script>
+        // Load header
+        fetch('/website/header.html')
+            .then(response => response.text())
+            .then(data => document.getElementById('header').innerHTML = data);
+
+        // Load footer
+        fetch('/website/footer.html')
+            .then(response => response.text())
+            .then(data => document.getElementById('footer').innerHTML = data);
+    </script>
 </body>
 </html>
