--- a/footer.html
+++ b/footer.html
@@ -8,11 +8,43 @@
         </a>
     </div>
     <p>
-        <a href="/website">Home</a> |
+        <a href="/website/">Home</a> |
         <a href="/website/about">About</a> |
         <a href="/website/donate">Donate</a> |
         <a href="/website/volunteer">Volunteer</a> |
         <a href="/website/howwehelp">How We Help</a>
     </p>
     <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
+
+    <style>
+        footer {
+            background: rgb(10, 129, 66); /* Secondary color */
+            color: #ffffff; /* White text */
+            padding: 20px;
+            text-align: center;
+            margin-top: auto;
+        }
+
+        .social-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        .social-buttons img {
+            width: 30px; /* Reduced size for icons */
+            height: 30px;
+        }
+
+        footer a {
+            color: rgb(45, 197, 105); /* Primary color */
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </footer>
