--- a/header.html
+++ b/header.html
@@ -17,6 +17,7 @@
         justify-content: center;
         padding: 10px 0;
         z-index: 2;
+        font-size: 1rem;
     }
 
     .menu-bar a {
