--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
         </a>
     </div>
     <p>
-        <a href="/website/">Home</a> |
+        <a href="/website">Home</a> |
         <a href="/website/about">About</a> |
         <a href="/website/donate">Donate</a> |
         <a href="/website/volunteer">Volunteer</a> |
@@ -33,14 +33,13 @@
         }
 
         .social-buttons img {
-            width: 30px; /* Reduced size for icons */
+            width: 30px; /* Adjusted size */
             height: 30px;
         }
 
         footer a {
             color: rgb(45, 197, 105); /* Primary color */
             text-decoration: none;
-            margin: 0 10px;
         }
 
         footer a:hover {
