--- a/donate/index.html
+++ b/donate/index.html
@@ -21,23 +21,6 @@
             flex-direction: column;
             min-height: 100vh;
         }
-        .menu-bar {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background-color: var(--secondary-color);
-            color: var(--white);
-            display: flex;
-            justify-content: center;
-            padding: 10px 0;
-            z-index: 2;
-        }
-        .menu-bar a {
-            margin: 0 20px;
-            text-decoration: none;
-            color: var(--white);
-            font-size: 1rem;
-        }
         .content {
             margin: 120px auto 20px;
             max-width: 800px;
@@ -105,36 +88,25 @@
             width: 120px; /* Larger image */
             margin-bottom: 10px;
         }
-        footer {
-            background: var(--secondary-color);
+        .cta-button {
+            display: inline-block;
+            margin-top: 20px;
+            background: var(--primary-color);
             color: var(--white);
-            padding: 20px;
-            text-align: center;
-            margin-top: auto;
-        }
-        footer .social-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-        footer .social-buttons img {
-            width: 40px;
-            height: 40px;
-        }
-        footer a {
-            color: var(--primary-color);
+            padding: 15px 30px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.2rem;
             text-decoration: none;
+            transition: background 0.3s ease;
+        }
+        .cta-button:hover {
+            background: var(--secondary-color);
         }
     </style>
 </head>
 <body>
-    <div class="menu-bar">
-        <a href="/website">Home</a>
-        <a href="/website/about">About</a>
-        <a href="/website/donate">Donate</a>
-        <a href="/website/volunteer">Volunteer</a>
-    </div>
+    <div id="header"></div>
     <div class="content">
         <div class="logo">
             <img src="/website/MindMattersLogo_Upload.png" alt="Mind Matters Logo">
@@ -160,23 +132,19 @@
             <p class="payment-name">Alternate Donation Methods</p>
             <p>DM us on Instagram or email us at <strong>mindmattersfoundation24@gmail.com</strong> if you'd like to suggest another donation method.</p>
         </div>
+        <a href="/website/howwehelp" class="cta-button">Where Is Your Donation Going?</a>
     </div>
-    <footer>
-        <div class="social-buttons">
-            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
-                <img src="https://static-00.iconduck.com/assets.00/instagram-with-circle-icon-2048x2048-21sdb59c.png" alt="Instagram">
-            </a>
-            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">
-                <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn">
-            </a>
-        </div>
-        <p>
-            <a href="/website">Home</a> |
-            <a href="/website/about">About</a> |
-            <a href="/website/donate">Donate</a> |
-            <a href="/website/volunteer">Volunteer</a>
-        </p>
-        <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
-    </footer>
+    <div id="footer"></div>
+    <script>
+        // Load header
+        fetch('/website/header.html')
+            .then(response => response.text())
+            .then(data => document.getElementById('header').innerHTML = data);
+
+        // Load footer
+        fetch('/website/footer.html')
+            .then(response => response.text())
+            .then(data => document.getElementById('footer').innerHTML = data);
+    </script>
 </body>
 </html>
