--- a/about/index.html
+++ b/about/index.html
@@ -27,49 +27,18 @@
             flex-direction: column;
             min-height: 100vh;
         }
-        .menu-bar {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background-color: var(--secondary-color);
-            color: var(--white);
-            display: flex;
-            justify-content: center;
-            padding: 10px 0;
-            z-index: 2;
-            font-size: 1rem;
-            line-height: 1.2;
-        }
-        .menu-bar a {
-            margin: 0 20px;
-            text-decoration: none;
-            color: var(--white);
-            font-size: 1rem;
-            position: relative;
-            display: inline-block;
-        }
-        .menu-bar a::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background-color: var(--white);
-            transition: width 0.3s ease-in-out;
-        }
-        .menu-bar a:hover::after {
-            width: 100%;
-        }
+
         .content {
             margin: 80px auto;
             max-width: 800px;
             padding: 20px;
             text-align: center;
         }
+
         .section {
             margin-bottom: 40px;
         }
+
         .leader-photo {
             width: 200px;
             height: 200px;
@@ -77,18 +46,22 @@
             border-radius: 50%;
             margin: 20px auto;
         }
+
         h1, h2 {
             color: var(--secondary-color);
             font-size: 2rem;
             margin-bottom: 20px;
         }
+
         h3 {
             font-size: 1.5rem;
             margin-bottom: 10px;
         }
+
         p {
             text-align: center;
         }
+
         .team-members {
             display: flex;
             justify-content: space-around;
@@ -96,48 +69,15 @@
             flex-wrap: wrap;
             gap: 40px;
         }
+
         .team-member {
             width: 200px;
             text-align: center;
         }
-        footer {
-            background: var(--secondary-color);
-            color: var(--white);
-            padding: 20px;
-            text-align: center;
-            margin-top: auto;
-        }
-        footer .social-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-        footer .social-buttons a {
-            display: flex;
-            align-items: center;
-        }
-        footer .social-buttons img {
-            width: 40px;
-            height: 40px;
-        }
-        footer a {
-            color: var(--primary-color);
-            text-decoration: none;
-            margin: 0 10px;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
     </style>
 </head>
 <body>
-    <div class="menu-bar">
-        <a href="/website" class="menu-link">Home</a>
-        <a href="/website/about" class="menu-link">About</a>
-        <a href="/website/donate" class="menu-link">Donate</a>
-        <a href="/website/volunteer" class="menu-link">Volunteer</a>
-    </div>
+    <div id="header"></div>
     <div class="content">
         <div class="section">
             <h1>Our Mission</h1>
@@ -200,22 +140,18 @@
             </div>
         </div>
     </div>
-    <footer>
-        <div class="social-buttons">
-            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
-                <img src="https://static-00.iconduck.com/assets.00/instagram-with-circle-icon-2048x2048-21sdb59c.png" alt="Instagram">
-            </a>
-            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">
-                <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn">
-            </a>
-        </div>
-        <p>
-            <a href="/website/">Home</a> |
-            <a href="/website/about">About</a> |
-            <a href="/website/donate">Donate</a> |
-            <a href="/website/volunteer">Volunteer</a>
-        </p>
-        <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
-    </footer>
+    <div id="footer"></div>
+
+    <script>
+        // Load header
+        fetch('/website/header.html')
+            .then(response => response.text())
+            .then(data => document.getElementById('header').innerHTML = data);
+
+        // Load footer
+        fetch('/website/footer.html')
+            .then(response => response.text())
+            .then(data => document.getElementById('footer').innerHTML = data);
+    </script>
 </body>
 </html>
